# geyser-kafka

./: .ammanrc.js  .gitignore  Cargo.toml  Makefile  README.md  config-local.json  package.json  rust-toolchain  tsconfig.json
.github/workflows/: release.yml  test.yml
ci/: cargo-build-test.sh  rust-version.sh
src/: allowlist.rs  cluster.rs  config.rs  env_config.rs  errors.rs  filter.rs  filtering_publisher.rs  lib.rs  plugin.rs  publisher.rs  system_programs.rs
src/env_config/: config_kafka.rs  config_local.rs  mod.rs
src/events/: mod.rs  replica_transaction_info.rs  update_account_event.rs
src/publisher/: filtering_publisher.rs  kafka_publisher.rs  local_publisher.rs  mod.rs  serializable_events.rs
test/fixtures/configs/: single-env-topic-overrides.json
test/ix/: README.md  send-delete-post.ts
test/ix/utils/: index.ts  log.ts  processes.ts  tasks.ts
