[package]
name = "solana-accountsdb-plugin-kafka"
description = "Solana AccountsDb plugin for Kafka"
authors = ["Blockdaemon"]
version = "0.1.5+solana.1.14.18"
edition = "2021"
repository = "https://github.com/ironforge-cloud/geyser-kafka"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.14.18" }
solana-logger = { version = "=1.14.18" }
solana-program = { version = "=1.14.18" }
solana-transaction-status = { version = "=1.14.18" }

log = "*"
prost = "*"
rdkafka = { version = "*", features = ["ssl", "sasl"] }
serde_json = { version = "~1" }
serde = { version = "~1", features = ["derive"] }
simple-error = "*"
toml_datetime = { version = "=0.6.1" }                  # 0.6.2 requires rust 1.64.0
toml_edit = { version = "=0.19.8" }                     # 0.19.9 requires rust 1.64.0
winnow = { version = "=0.4.1" }                         # 0.4.2 requires rust 1.64.0
ureq = "2.5.0"

[dev-dependencies]
mockito = "1.0.2"

[build-dependencies]
prost-build = "0.11"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
