[package]
name = "solana-accountsdb-plugin-kafka"
description = "Solana AccountsDb plugin for Kafka"
authors = ["Blockdaemon"]
version = "0.1.5+solana.1.16.1-rc1"
edition = "2021"
repository = "https://github.com/ironforge-cloud/geyser-kafka"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-geyser-plugin-interface = { version = "~1.16" }
solana-logger = { version = "~1.16" }
solana-program = "~1.16"
solana-transaction-status = { version = "~1.16" }

log = "*"
prost = "*"
rdkafka = { version = "0.33.2", features = ["ssl", "sasl"] }
serde_json = { version = "~1" }
serde = { version = "~1", features = ["derive"] }
simple-error = "*"
toml_datetime = { version = "0.6.1" }
toml_edit = { version = "0.19.8" }
winnow = { version = "0.4.1" }
ureq = "2.5.0"

[dev-dependencies]
mockito = "0.31.1"

[build-dependencies]
prost-build = "*"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
