[package]
name = "solana-accountsdb-plugin-kafka"
description = "Solana AccountsDb plugin for Kafka"
version = "0.1.6+solana.1.16.12"
edition = "2021"
repository = "https://github.com/ironforge-cloud/geyser-kafka"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-geyser-plugin-interface = { version = "~1.16" }
solana-logger = { version = "~1.16" }
solana-program = "~1.16"
solana-transaction-status = { version = "~1.16" }

hyper = { version = "0.14.26", features = ["server"] }
lazy_static = "1.4.0"
log = "*"
prometheus = "0.13.3"
prost = "*"
rdkafka = { version = "0.34.0", features = ["ssl", "sasl"] }
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
tokio = { version = "1.32", features = ["rt-multi-thread", "time", "macros", "sync"] }
simple-error = "*"
ureq = "2.5.0"
thiserror = "1.0.49"

[dev-dependencies]
mockito = "0.31.1"

[build-dependencies]
anyhow = "1.0.75"
cargo-lock = "9.0.0"
git-version = "0.3.5"
prost-build = "*"
vergen = { version = "8.2.1", features = ["build", "rustc"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
